gitlab/ce-13.6.4/template.yaml
apiVersion: tmax.io/v1
kind: ClusterTemplate
metadata:
  name: gitlab-template
  annotations:
    template-version: 5.0.6
    tested-operator-version: 0.2.5
shortDescription: "GitLab Deployment"
longDescription: "GitLab Deployment"
urlDescription: https://about.gitlab.com/
imageUrl: "https://upload.wikimedia.org/wikipedia/commons/c/c6/GitLab_logo.png"
provider: tmax
categories:
- gitlab
- git
- scm
parameters:
- name: APP_NAME
  displayName: AppName
  description: A GitLab Deployment Name
  required: true
  valueType: string
- name: STORAGE
  displayName: Storage
  description: Storage size
  required: true
  valueType: string
- name: STORAGE_CLASS
  displayName: StorageClass
  description: Storage class name
  value: csi-cephfs-sc
  required: true
  valueType: string
- name: SERVICE_TYPE
  displayName: ServiceType
  description: Service Type (ClusterIP/NodePort/LoadBalancer/Ingress)
  required: true
  valueType: string
- name: EXTERNAL_URL
  displayName: ExternalURL
  description: External URL, if it's different from the default endpoint of SERVICE_TYPE
  required: false
  value: ''
  valueType: string
- name: WEB_NODE_IP
  displayName: WebNodeIP
  description: (Only for NodePort type) Web NodeIP
  required: false
  value: ''
  valueType: string
- name: WEB_NODE_PORT
  displayName: WebNodePort
  description: (Only for NodePort type) Web NodePort
  required: false
  value: 80
  valueType: number
- name: INGRESS_HOST
  displayName: IngressHost
  description: (Only for Ingress type) Ingress hostname
  required: false
  value: ''
  valueType: string
- name: SSH_PORT
  displayName: SshPort
  description: SSH port for git clone/pull/push
  required: true
  value: 2221
  valueType: number
- name: RESOURCE_CPU
  displayName: ResourceCPU
  description: Resource request, CPU (e.g., 1)
  required: true
  valueType: string
- name: RESOURCE_MEM
  displayName: ResourceMem
  description: Resource request, Mem (e.g., 1Gi)
  required: true
  valueType: string
- name: KEYCLOAK_URL
  displayName: Keycloak URL
  description: Keycloak URL (including protocol)
  value: ''
  required: false
  valueType: string
- name: KEYCLOAK_CLIENT
  displayName: Keycloak Client
  description: keycloak client name
  value: ''
  required: false
  valueType: string
- name: KEYCLOAK_SECRET
  displayName: Keycloak Secret
  description: Keycloak client secret
  value: ''
  required: false
  valueType: string
- name: KEYCLOAK_TLS_SECRET_NAME
  displayName: Keycloak TLS Secret name
  description: Secret name where keycloak's tls file is located
  value: ''
  required: false
  valueType: string
- name: TLS_SECRET_NAME
  displayName: user TLS Secret name
  description: Secret name where user's tls file is located
  value: ''
  required: false
  valueType: string
- name: INGRESS_CLASS
  displayName: ingress class
  description: ingress class name
  value: 'nginx'
  required: false
  valueType: string
objects:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: ${APP_NAME}-account
- apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: ${APP_NAME}-role
  rules:
  - apiGroups: [""]
    resources: ["services"]
    resourceNames: ["${APP_NAME}-service"]
    verbs: ["get", "list", "create", "patch", "update"]
  - apiGroups: ["extensions", "apps"]
    resources: ["deployments"]
    resourceNames: ["${APP_NAME}"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
  - apiGroups: [""]
    resources: ["secrets"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
  - apiGroups: ["networkings", "extensions","networking.k8s.io"]
    resources: ["ingresses"]
    resourceNames: ["${APP_NAME}-ingress"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
  - apiGroups: ["cert-manager.io"]
    resources: ["issuers"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
  - apiGroups: ["cert-manager.io"]
    resources: ["Certificate","certificates"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: ${APP_NAME}-binding
  subjects:
  - kind: ServiceAccount
    name: ${APP_NAME}-account
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: ${APP_NAME}-role
- apiVersion: v1
  kind: Service
  metadata:
    name: ${APP_NAME}-service
    labels:
      app: ${APP_NAME}
  spec:
    type: ClusterIP
    ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: ssh
      port: ${SSH_PORT}
      targetPort: 22
    selector:
      app: ${APP_NAME}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ${APP_NAME}-ingress
    annotations:
      nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
      kubernetes.io/ingress.class: ${INGRESS_CLASS}
  spec:
    tls:
      - hosts:
        - waiting.ip
        secretName: ${APP_NAME}-tls
    rules:
    - host: waiting.ip
      http:
        paths:
        - backend:
            service:
              name: ${APP_NAME}-service
              port:
                number: ${WEB_NODE_PORT}
          path: /
          pathType: Prefix
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APP_NAME}-pvc
    labels:
      app: ${APP_NAME}
  spec:
    storageClassName: ${STORAGE_CLASS}
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: ${STORAGE}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ${APP_NAME}
    labels:
      app: ${APP_NAME}
  spec:
    selector:
      matchLabels:
        app: ${APP_NAME}
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: ${APP_NAME}
      spec:
        serviceAccountName: ${APP_NAME}-account
        containers:
        - name: ${APP_NAME}
          image: docker.io/gitlab/gitlab-ce:13.6.4-ce.0
          command:
          - /bin/sh
          - -c
          - -x
          - |
            export GITLAB_OMNIBUS_CONFIG="$(cat /tmp/shared/omnibus.env)"
            echo 'export GITLAB_OMNIBUS_CONFIG="$(cat /tmp/shared/omnibus.env)"' >> /root/.bashrc
            mkdir -p /etc/gitlab/trusted-certs
            cp /tmp/shared/keycloak.pem /etc/gitlab/trusted-certs/keycloak.pem
            /assets/wrapper
          ports:
          - name: http
            containerPort: ${WEB_NODE_PORT}
          - name: https
            containerPort: 443
          - name: ssh
            containerPort: 22
          volumeMounts:
          - name: ${APP_NAME}-pv
            mountPath: /etc/gitlab
            subPath: config
          - name: ${APP_NAME}-pv
            mountPath: /var/opt/gitlab
            subPath: data
          - name: shared
            mountPath: /tmp/shared
          resources:
            limits:
              cpu: ${RESOURCE_CPU}
              memory: ${RESOURCE_MEM}
            requests:
              cpu: ${RESOURCE_CPU}
              memory: ${RESOURCE_MEM}
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - |
                /opt/gitlab/bin/gitlab-healthcheck --fail --max-time 10
            periodSeconds: 150
        volumes:
        - name: ${APP_NAME}-pv
          persistentVolumeClaim:
            claimName: ${APP_NAME}-pvc
        - name: shared
          emptyDir: {}
plans:
- name: gitlab-plan1
  description: "GitLab Plan"
  metadata:
    bullets:
    - "GitLab Deployment Plan"
    costs:
      amount: 100
      unit: $
  free: false
  bindable: true
  plan_updateable: false
  schemas:
    service_instance:
      create:
        parameters:
          APP_NAME: gitlab-deploy
          STORAGE: 10Gi
